--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio page</title>
+	<title>Jasmine Banger</title>
 	meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="p1_portfolio.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,6 +12,7 @@
     <li><a href="#welcome-section">About</a></li>
     <li><a href="#projects">Work</a></li>
     <li><a href="#contact">Contact</a></li>
+	  <li><a href="#projects">Projects</a></li>
   </ul>
 </nav>
 
