--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -10,9 +10,9 @@
 	<nav>
   <ul id='navbar'>
     <li><a href="#welcome-section">About</a></li>
-    <li><a href="#projects">Work</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#work">Work</a></li>
 	  <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
