--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Portfolio page</title>
-	meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="p1_portfolio.css">
+	<meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="my_portfolio.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
